# SpriteAudioVisualizer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DebugCompileBuild.bat  DebugCompileEditor.bat  ReleaseCompileEditor.bat
PoopTubing/: PoopTubing.cmake
PoopTubing/src/: Application.hpp  Core.hpp  EntryPoint.cpp  EntryPoint.hpp  PoopTubing.hpp
PoopTubing/src/Application/: Application.cpp  Application.hpp  LayerStack.cpp  LayerStack.hpp
PoopTubing/src/Audio/: Microphone.cpp  Microphone.hpp
PoopTubing/src/Event/: Event.hpp
PoopTubing/src/Log/: Log.cpp  Log.hpp
PoopTubing/src/Renderer/: Camera.cpp  Camera.hpp  OpenglGraphicsContext.cpp  OpenglGraphicsContext.hpp  RenderStructures.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  Transform.hpp
PoopTubing/src/Utils/: FileSystem.cpp  FileSystem.hpp  StringHelper.hpp
PoopTubing/src/Window/: GraphicsContext.cpp  GraphicsContext.hpp  Window.cpp  Window.hpp
PoopTubing/vendors/GLFW/: GLFW.cmake
PoopTubing/vendors/glad/: glad.cmake
PoopTubing/vendors/glad/glad/include/glad/: glad.h
PoopTubing/vendors/glad/glad/src/: glad.c
PoopTubing/vendors/glm/: glm.cmake
PoopTubing/vendors/imgui/: imgui.cmake
PoopTubing/vendors/stb/: StbImplementation.cpp  StbImplementation.hpp  stb.cmake
PoopTubingEditor/: PooptubingEditor.cmake
PoopTubingEditor/src/: Editor.cpp
SpriteAudioVisualizer/: SpriteAudioVisualizer.cmake
SpriteAudioVisualizer/src/: Core.hpp  EntryPoint.cpp  PoopTubing.hpp
SpriteAudioVisualizer/src/Application/: Application.cpp  Application.hpp  LayerStack.hpp
SpriteAudioVisualizer/src/Audio/: Microphone.cpp  Microphone.hpp
SpriteAudioVisualizer/src/Editor/: ImGuiEditor.cpp  ImGuiEditor.hpp
SpriteAudioVisualizer/src/Event/: WindowEvent.hpp
SpriteAudioVisualizer/src/Renderer/: Camera.cpp  RenderStructures.hpp  Renderer.cpp  RendererAPI.cpp  RendererAPI.hpp  Texture.cpp  Transform.hpp
SpriteAudioVisualizer/src/Window/: Window.hpp
SpriteAudioVisualizer/vendors/GLFW/: GLFW.cmake
SpriteAudioVisualizer/vendors/glad/: glad.cmake
SpriteAudioVisualizer/vendors/glm/: glm.cmake
SpriteAudioVisualizer/vendors/imgui/: imgui.cmake
SpriteAudioVisualizer/vendors/portaudio/lib/.libs/: portaudio-2.dll.def  portaudio.dll.lib  portaudio.exp
SpriteAudioVisualizerEditor/: SpriteAudioVisualizerEditor.cmake
SpriteAudioVisualizerEditor/src/: Editor.cpp  Editor.hpp  MicSelection.cpp  MicSelection.hpp
